update color of status bar

--- a/linen-starter/src/main/res/values/colors.xml
+++ b/linen-starter/src/main/res/values/colors.xml
@@ -11,10 +11,10 @@
     <color name="lapis_lazuli">#26619C</color>
     <color name="orange_crayola">#FF7538</color>
     <color name="persimmon">#EC5800</color>
+    <color name="prussian_blue">#003153</color>
     <color name="pumpkin">#FF7518</color>
     <color name="saddle_brown">#8B4513</color>
     <color name="sienna">#882D17</color>
-
     <color name="space_cadet">#1D2951</color>
     <color name="spanish_orange">#E86100</color>
 
