--- a/linen-starter/src/main/res/values-v21/styles.xml
+++ b/linen-starter/src/main/res/values-v21/styles.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="AppTheme.Polyfill">
-        <item name="android:statusBarColor">@color/space_cadet</item>
+        <item name="android:statusBarColor">@color/prussian_blue</item>
 
         <!-- e.g. header in recent app -->
         <item name="colorPrimary">@color/toolbar_background</item>
