--- a/linen-starter/src/main/res/values/colors.xml
+++ b/linen-starter/src/main/res/values/colors.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="amaranth">#e52b50</color>
+    <color name="brandeis_blue">#0070FF</color>
+    <color name="bright_navy_blue">#1974D2</color>
     <color name="cardinal">#C41E3A</color>
     <color name="carnelian">#B31B1B</color>
     <color name="cerulean_blue">#2A52BE</color>
     <color name="dark_imperial_blue">#00416A</color>
     <color name="dark_midnight_blue">#003366</color>
     <color name="denim">#1560BD</color>
+    <color name="french_blue">#0072BB</color>
     <color name="generic_viridian">#007F66</color>
+    <color name="honolulu_blue">#006DB0</color>
     <color name="lapis_lazuli">#26619C</color>
+    <color name="medium_electric_blue">#035096</color>
     <color name="orange_crayola">#FF7538</color>
     <color name="persimmon">#EC5800</color>
     <color name="prussian_blue">#003153</color>
     <color name="pumpkin">#FF7518</color>
     <color name="saddle_brown">#8B4513</color>
+    <color name="sapphire">#0F52BA</color>
     <color name="sienna">#882D17</color>
     <color name="space_cadet">#1D2951</color>
     <color name="spanish_orange">#E86100</color>
@@ -21,6 +27,12 @@
     <!-- traditional Japanese colors -->
 
     <color name="kakiiro">#ed6d3d</color><!-- 柿色 -->
+    <color name="koiai">#0f2350</color><!-- 濃藍 -->
     <color name="niiro">#e45e32</color><!-- 丹色 -->
+    <color name="rouiro">#2b2b2b</color><!-- 蝋色 -->
+    <color name="seiran">#274a78</color><!-- 青藍 -->
+    <color name="shikkoku">#0d0015</color><!-- 漆黒 -->
     <color name="terigaki">#eb6238</color><!-- 照柿 -->
+
+
 </resources>
