--- a/linen-starter/src/main/res/layout/menu_row__item.xml
+++ b/linen-starter/src/main/res/layout/menu_row__item.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingStart="20dp"
+    android:paddingEnd="10dp"
+    >
 
     <TextView
         android:id="@+id/menu_row__item__text"
         android:text="sample item"
+        android:textSize="15sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
