--- a/linen-starter/src/main/res/layout/menu_row__label.xml
+++ b/linen-starter/src/main/res/layout/menu_row__label.xml
@@ -3,16 +3,27 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingStart="10dp"
+    android:layout_height="wrap_content"
+    android:paddingTop="15dp"
     android:paddingEnd="10dp"
+    android:paddingBottom="10dp"
+    android:paddingStart="13dp"
     >
 
     <TextView
         android:id="@+id/menu_row__label__text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="sample label"
         android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@color/menu_label"
+        />
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="1px"
+        android:background="@color/menu_label"
+        />
 
 </LinearLayout>
