--- a/linen-starter/src/main/res/values/styles.xml
+++ b/linen-starter/src/main/res/values/styles.xml
@@ -87,6 +87,7 @@
 
     <dimen name="app_toolbar_bottom_height">38dp</dimen>
 
+    <color name="menu_label">#878787</color>
     <color name="toolbar_background">@color/dark_imperial_blue</color>
     <color name="to_next_button_background">@color/lapis_lazuli</color>
 
