--- a/linen-starter/src/main/res/layout/menu_row__item.xml
+++ b/linen-starter/src/main/res/layout/menu_row__item.xml
@@ -4,10 +4,11 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp"
+    android:paddingTop="9dp"
     android:paddingEnd="10dp"
-    android:paddingBottom="8dp"
+    android:paddingBottom="9dp"
     android:paddingStart="23dp"
+    android:background="?android:attr/selectableItemBackground"
     >
 
     <TextView
