--- a/linen-starter/src/main/res/layout/main_layout.xml
+++ b/linen-starter/src/main/res/layout/main_layout.xml
@@ -1,5 +1,6 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout__root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,6 +18,16 @@
         android:orientation="vertical"
         android:clickable="true"
         >
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.Toolbar
+                style="@style/AppToolbar"
+                app:title="Linen"
+                />
+
+        </android.support.design.widget.AppBarLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/main_layout__menu_list"
