--- a/linen-starter/src/main/res/animator/slide_out.xml
+++ b/linen-starter/src/main/res/animator/slide_out.xml
@@ -1,37 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shareInterpolator="false"
     >
-    <!--android:shareInterpolator="false"-->
-    <!--android:interpolator="@android:anim/accelerate_interpolator"-->
-
-    <scale
+    <set
         android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-        android:fromXScale="1.0"
-        android:toXScale="0.9"
-        android:fromYScale="1.0"
-        android:toYScale="0.9"
-        android:duration="250"
-        android:pivotX="50%"
-        android:pivotY="30%"
-        android:fillAfter="false"
-        />
+        >
+        <scale
+            android:fromXScale="1.0"
+            android:toXScale="0.9"
+            android:fromYScale="1.0"
+            android:toYScale="0.9"
+            android:duration="250"
+            android:pivotX="50%"
+            android:pivotY="30%"
+            />
+        <alpha
+            android:duration="250"
+            android:fromAlpha="1.0"
+            android:toAlpha="0.75"
+            />
+    </set>
+
     <set
         android:interpolator="@android:anim/accelerate_interpolator"
-        android:startOffset="100"
+        android:startOffset="150"
         >
         <translate
             android:duration="350"
             android:fromYDelta="0%"
             android:toYDelta="20%"
             />
-        <alpha
-            android:duration="200"
-            android:fromAlpha="1.0"
-            android:toAlpha="0"
-            />
-
     </set>
 
 </set>
