--- a/linen-starter/src/main/res/layout/setting_channels_row.xml
+++ b/linen-starter/src/main/res/layout/setting_channels_row.xml
@@ -3,21 +3,43 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingStart="10dp"
+    android:paddingEnd="5dp"
+    android:paddingTop="7dp"
+    >
 
     <TextView
         android:id="@+id/setting_channels_row__name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        />
 
     <TextView
         android:id="@+id/setting_channels_row__description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:paddingStart="3dp"
+        android:paddingEnd="3dp"
+        android:textSize="15sp"
+        />
 
     <TextView
         android:id="@+id/setting_channels_row__created_at"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
+        android:textSize="12sp"
+        android:textAlignment="textEnd"
+        />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/menu_label"
+        />
 
 </LinearLayout>
