add back button to channels setting

--- a/linen-starter/src/main/res/layout/setting_channels_layout.xml
+++ b/linen-starter/src/main/res/layout/setting_channels_layout.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
+            android:id="@+id/setting_channels_layout__toolbar"
             style="@style/AppToolbar"
             app:title="Channel Settings"
             />
