--- a/linen-starter/src/main/res/layout/menu_row__label.xml
+++ b/linen-starter/src/main/res/layout/menu_row__label.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
     android:paddingTop="15dp"
     android:paddingEnd="10dp"
     android:paddingBottom="10dp"
