--- a/linen-starter/src/main/res/layout/setting_channels_row.xml
+++ b/linen-starter/src/main/res/layout/setting_channels_row.xml
@@ -31,7 +31,7 @@
         android:layout_below="@id/setting_channels_row__name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="@dimen/setting_channels_row_padding"
         android:textSize="15sp"
         />
 
@@ -40,8 +40,8 @@
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_below="@id/setting_channels_row__description"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginStart="@dimen/setting_channels_row_padding"
+        android:layout_marginEnd="@dimen/setting_channels_row_padding"
         android:background="@color/text_secondary"
         />
 
