--- a/linen-starter/src/main/res/layout/setting_channel_sources_row.xml
+++ b/linen-starter/src/main/res/layout/setting_channel_sources_row.xml
@@ -1,13 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    app:cardUseCompatPadding="true"
+    >
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="@dimen/setting_channels_row_padding"
+    >
 
     <TextView
         android:id="@+id/setting_channel_sources_row__title"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
+        android:paddingStart="@dimen/setting_channels_row_padding"
+        android:paddingEnd="@dimen/setting_channels_row_padding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:textSize="18sp"
+        />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/setting_channel_sources_row__description"
+        android:paddingStart="@dimen/setting_channels_row_padding"
+        android:paddingEnd="@dimen/setting_channels_row_padding"
+        android:layout_below="@id/setting_channel_sources_row__title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/setting_channels_row_padding"
+        android:textSize="15sp"
+        />
+
+    <View
+        android:id="@+id/border"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_below="@id/setting_channel_sources_row__description"
+        android:layout_marginStart="@dimen/setting_channels_row_padding"
+        android:layout_marginEnd="@dimen/setting_channels_row_padding"
+        android:background="@color/text_secondary"
+        />
+
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/setting_channel_sources_row__switch_subscribe"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_below="@id/border"
+        android:layout_alignParentEnd="true"
+        android:paddingEnd="@dimen/setting_channels_row_padding"
+        android:paddingStart="0dp"
+        />
+
+    <SeekBar
+        android:id="@+id/setting_channel_sources_row__rating_bar"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:progress="0"
+        android:max="100"
+        android:layout_below="@id/border"
+        android:layout_toStartOf="@id/setting_channel_sources_row__switch_subscribe"
+
+        android:layout_centerVertical="true"
+        android:minHeight="45dp"
+        android:maxHeight="45dp"
+        android:progressTint="@color/to_next_button_background"
+        android:progressBackgroundTint="@color/to_next_button_background"
+        />
+
+    <TextView
+        android:id="@+id/setting_channel_sources_row__rating_label"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:text="RATING"
+        android:gravity="center_vertical"
+        android:textColor="@color/text_secondary"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:layout_below="@id/border"
+        android:layout_toStartOf="@id/setting_channel_sources_row__rating_bar"
+        />
+
+</RelativeLayout>
+
+</android.support.v7.widget.CardView>
