add button to create preset sources

--- a/linen-starter/src/main/res/layout/dev_create_records_layout.xml
+++ b/linen-starter/src/main/res/layout/dev_create_records_layout.xml
@@ -26,6 +26,13 @@
         />
 
     <Button
+        android:id="@+id/dev_create_records_layout__create_preset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="create preset"
+        />
+
+    <Button
         android:id="@+id/dev_create_records_layout__delete_database"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
