--- a/linen-starter/src/main/res/layout/setting_channel_sources_row.xml
+++ b/linen-starter/src/main/res/layout/setting_channel_sources_row.xml
@@ -83,6 +83,17 @@
         android:layout_toStartOf="@id/setting_channel_sources_row__rating_bar"
         />
 
+    <ImageView
+        android:id="@+id/setting_channel_sources_row__sync"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:foregroundGravity="center_vertical"
+        android:layout_alignStart="@id/border"
+        android:layout_below="@id/border"
+        android:src="@drawable/ic_sync_24dp"
+        android:contentDescription="sync"
+        />
+
 </RelativeLayout>
 
 </android.support.v7.widget.CardView>
