--- a/linen-starter/src/main/res/values/styles.xml
+++ b/linen-starter/src/main/res/values/styles.xml
@@ -65,8 +65,8 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
 
-        <item name="android:paddingTop">7dp</item>
-        <item name="android:paddingBottom">7dp</item>
+        <!--<item name="android:paddingTop">16dp</item>-->
+        <!--<item name="android:paddingBottom">16dp</item>-->
 
         <item name="android:background">?android:attr/selectableItemBackground</item>
     </style>
