--- a/linen-starter/src/main/res/layout/source_row.xml
+++ b/linen-starter/src/main/res/layout/source_row.xml
@@ -6,8 +6,6 @@
 
 <RelativeLayout
     style="@style/AppCardViewRow"
-    android:paddingStart="10dp"
-    android:paddingEnd="5dp"
     >
 
     <TextView
@@ -18,6 +16,8 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
+        android:lineSpacingExtra="4dp"
+        android:lineSpacingMultiplier="1.2"
         />
 
     <TextView
@@ -29,6 +29,8 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="2"
+        android:lineSpacingExtra="4dp"
+        android:lineSpacingMultiplier="1.2"
         />
 
 </RelativeLayout>
