remove useless effect on scroll

--- a/linen-starter/src/main/res/values/styles.xml
+++ b/linen-starter/src/main/res/values/styles.xml
@@ -20,6 +20,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">@color/list_background</item>
+        <item name="android:overScrollMode">never</item>
         <item name="android:layout_marginBottom">@dimen/app_toolbar_bottom_height</item>
     </style>
 
