--- a/linen-starter/src/main/res/layout/setting_channel_sources_layout.xml
+++ b/linen-starter/src/main/res/layout/setting_channel_sources_layout.xml
@@ -24,6 +24,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/list_background"
+        android:overScrollMode="never"
         />
 
 </LinearLayout>
