--- a/linen-starter/src/main/res/layout/menu_row__item.xml
+++ b/linen-starter/src/main/res/layout/menu_row__item.xml
@@ -18,7 +18,8 @@
         android:layout_margin="3dp"
         android:text="sample item"
         android:textSize="15sp"
-        android:textStyle="bold"
+        android:textColor="@color/text_secondary"
         />
+    <!--android:textStyle="bold"-->
 
 </LinearLayout>
