--- a/linen-starter/src/main/res/values/styles_setting_channels.xml
+++ b/linen-starter/src/main/res/values/styles_setting_channels.xml
@@ -5,7 +5,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
 
-        <item name="android:textColor">@color/text_secondary</item>
+        <item name="android:textColor">@color/text_tertiary</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">bold</item>
 
