--- a/linen-starter/src/main/res/layout/setting_channels_row.xml
+++ b/linen-starter/src/main/res/layout/setting_channels_row.xml
@@ -20,7 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:textSize="18sp"
+        android:textSize="17sp"
+        android:textColor="@color/text_primary"
         />
 
     <TextView
@@ -32,6 +33,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/setting_channels_row_padding"
         android:textSize="15sp"
+        android:textColor="@color/text_secondary"
+        android:lineSpacingMultiplier="1.2"
         />
 
     <View
@@ -41,7 +44,7 @@
         android:layout_below="@id/setting_channels_row__description"
         android:layout_marginStart="@dimen/setting_channels_row_padding"
         android:layout_marginEnd="@dimen/setting_channels_row_padding"
-        android:background="@color/text_secondary"
+        android:background="@color/text_tertiary"
         />
 
     <android.support.v7.widget.SwitchCompat
