--- a/linen-starter/src/main/res/values/styles.xml
+++ b/linen-starter/src/main/res/values/styles.xml
@@ -94,7 +94,10 @@
 
     <dimen name="app_toolbar_bottom_height">38dp</dimen>
 
-    <color name="text_secondary">#878787</color>
+    <color name="text_primary">@color/rouiro</color>
+    <color name="text_secondary">#4b4b4b</color>
+    <color name="text_tertiary">#838383</color>
+
     <color name="toolbar_background">@color/dark_imperial_blue</color>
     <color name="list_background">@color/opaque_blue</color>
     <color name="to_next_button_background">@color/lapis_lazuli</color>
