--- a/linen-starter/src/main/res/values/styles_setting_channels.xml
+++ b/linen-starter/src/main/res/values/styles_setting_channels.xml
@@ -5,9 +5,9 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
 
-        <item name="android:textColor">@color/text_secondary</item>
+        <item name="android:textColor">@color/text_primary</item>
         <item name="android:textSize">12sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
 
         <item name="android:paddingTop">@dimen/setting_channels_row_padding</item>
         <item name="android:paddingEnd">@dimen/setting_channels_row_padding</item>
