--- a/linen-starter/src/main/res/layout/menu_row__item.xml
+++ b/linen-starter/src/main/res/layout/menu_row__item.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="15sp"
-        android:textColor="@color/text_secondary"
+        android:textColor="@color/text_primary"
         />
 
 </LinearLayout>
