--- a/linen-starter/src/main/res/layout/menu_row__label.xml
+++ b/linen-starter/src/main/res/layout/menu_row__label.xml
@@ -4,18 +4,19 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="14dp"
+    android:paddingTop="12dp"
     android:paddingEnd="16dp"
-    android:paddingBottom="8dp"
-    android:paddingStart="16dp"
+    android:paddingBottom="12dp"
+    android:paddingStart="32dp"
+    android:background="?android:attr/selectableItemBackground"
     >
 
     <TextView
         android:id="@+id/menu_row__label__text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:textColor="@color/text_tertiary"
+        android:textSize="15sp"
+        android:textColor="@color/text_primary"
         />
 
 </LinearLayout>
