--- a/linen-starter/src/main/res/layout/menu_row__title.xml
+++ b/linen-starter/src/main/res/layout/menu_row__title.xml
@@ -4,19 +4,18 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="12dp"
+    android:paddingTop="14dp"
     android:paddingEnd="16dp"
-    android:paddingBottom="12dp"
-    android:paddingStart="32dp"
-    android:background="?android:attr/selectableItemBackground"
+    android:paddingBottom="8dp"
+    android:paddingStart="16dp"
     >
 
     <TextView
-        android:id="@+id/menu_row__item__text"
+        android:id="@+id/menu_row__title__text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:textColor="@color/text_primary"
+        android:textSize="14sp"
+        android:textColor="@color/text_tertiary"
         />
 
 </LinearLayout>
