--- a/linen-starter/src/main/res/drawable/ic_call_made_24dp.xml
+++ b/linen-starter/src/main/res/drawable/ic_call_made_24dp.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="#26619C"
+        android:fillColor="#bbc8e6"
         android:pathData="M9,5v2h6.59L4,18.59 5.41,20 17,8.41V15h2V5z"/>
 </vector>
