--- a/linen-starter/src/main/res/values/colors.xml
+++ b/linen-starter/src/main/res/values/colors.xml
@@ -26,12 +26,16 @@
 
     <!-- traditional Japanese colors -->
 
+    <color name="awafujiiro">#bbc8e6</color><!-- 淡藤色 -->
+    <color name="benimidori">#8491c3</color><!-- 紅碧 -->
     <color name="kakiiro">#ed6d3d</color><!-- 柿色 -->
     <color name="koiai">#0f2350</color><!-- 濃藍 -->
     <color name="niiro">#e45e32</color><!-- 丹色 -->
     <color name="rouiro">#2b2b2b</color><!-- 蝋色 -->
+    <color name="ruriiro">#1e50a2</color><!-- 瑠璃色 -->
     <color name="seiran">#274a78</color><!-- 青藍 -->
     <color name="shikkoku">#0d0015</color><!-- 漆黒 -->
     <color name="terigaki">#eb6238</color><!-- 照柿 -->
+    <color name="usugunjou">#5383c3</color><!-- 薄群青 -->
 
 </resources>
