--- a/linen-starter/src/main/res/layout/unread_outline_row__source.xml
+++ b/linen-starter/src/main/res/layout/unread_outline_row__source.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp"
+    android:paddingTop="0dp"
+    android:paddingEnd="0dp"
+    android:paddingBottom="0dp"
+    android:paddingStart="0dp"
+    android:gravity="center_vertical"
     >
+    <!--android:background="@android:color/white"-->
+    <!--android:fontFamily="sans-serif-thin"-->
+
     <TextView
+        android:drawableStart="@drawable/ic_cast_connected_24dp"
         android:id="@+id/unread_outline_row__source__title"
-        android:textSize="13sp"
-        android:layout_width="wrap_content"
+        android:textSize="12sp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:lineSpacingExtra="3dp"
-        android:lineSpacingMultiplier="1.1"
-        android:textColor="@color/text_secondary"
-        android:ellipsize="end"
-        android:maxLines="3"
+        android:paddingTop="8dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="4dp"
+        android:paddingStart="10dp"
+        android:drawablePadding="6dp"
+        android:textColor="@color/lapis_lazuli"
+        android:maxLines="1"
         />
 </LinearLayout>
