--- a/linen-starter/src/main/res/layout/unread_detail_row__source.xml
+++ b/linen-starter/src/main/res/layout/unread_detail_row__source.xml
@@ -8,6 +8,7 @@
     android:paddingEnd="0dp"
     android:paddingBottom="0dp"
     android:paddingStart="0dp"
+    android:layout_marginBottom="-3dp"
     android:gravity="center_vertical"
     >
     <TextView
