--- a/linen-starter/src/main/res/layout/setting_preset_tab__all.xml
+++ b/linen-starter/src/main/res/layout/setting_preset_tab__all.xml
@@ -10,4 +10,12 @@
         android:text="sample all area"
         />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/setting_preset_tab__all__channel_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/list_background"
+        android:overScrollMode="never"
+        />
+
 </LinearLayout>
