add display for selected channels

--- a/linen-starter/src/main/res/layout/setting_preset_tab__selected.xml
+++ b/linen-starter/src/main/res/layout/setting_preset_tab__selected.xml
@@ -4,10 +4,12 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="sample selected area"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/setting_preset_tab__selected__channel_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/list_background"
+        android:overScrollMode="never"
         />
 
 </LinearLayout>
